--- a/static/src/css/hrms_dashboard.css
+++ b/static/src/css/hrms_dashboard.css
@@ -1132,6 +1132,22 @@ h4 .stat-count {
     align-items: center;
 }
 
+.tooltip {
+    background: #eee;
+    box-shadow: 0 0 5px #999999;
+    color: #333;
+    display: none;
+    font-size: 12px;
+    left: 130px;
+    padding: 10px;
+    position: absolute;
+    text-align: center;
+    top: 95px;
+    width: 80px;
+    z-index: 10;
+}
+
+
 .oh-ribbon {
   position: absolute;
   left: -5px; top: -5px;
