--- a/static/src/css/hrms_dashboard.css
+++ b/static/src/css/hrms_dashboard.css
@@ -568,6 +568,23 @@ h4 .stat-count {
     padding-bottom: 65px;
     text-align: center !important;
 }
+.account_invoices {
+    height: auto;
+    padding-bottom: 65px;
+    text-align: center !important;
+}
+.empty_graph_data_invoice, .empty_graph_data_bill {
+    font-size: 16px;
+    height: auto;
+    padding-bottom: 40px;
+    text-align: center !important;
+    color: Green;
+}
+.account_bills {
+    height: auto;
+    padding-bottom: 65px;
+    text-align: center !important;
+}
 .hr_leave_allocations_approve p {
     font-size: 16px;
     color: #ff8762;
